--- a/style.css
+++ b/style.css
@@ -14,13 +14,32 @@ body {
     display: grid;
     grid-template-columns: repeat(4,auto);
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px; /* found that grid gap allows for a better aestetic for card look*/
+    grid-gap: 5px; /* found that grid gap allows for a better aestetic for card look*/
     /* border: .5px solid black; */
-    height: 700px;
-    width: 550px;
+    /* height: 300px;
+    width: 550px; */
     margin: auto;
+    justify-content: center;
 }
 
 .card {
     border: 2px solid black;
+    height: 150px;
+    width: 150px;
+    position: relative;
+    background: radial-gradient(#93a5cf, #e4efe9);
+}
+
+.back-face {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.back-icon {
+    width: 140px;
+    height: 140px;
 }
