--- a/style.css
+++ b/style.css
@@ -30,16 +30,26 @@ body {
     background: radial-gradient(#93a5cf, #e4efe9);
 }
 
-.back-face {
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+.both-sides {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /*this will allow for images to not leak over to another sie or outside*/
 }
+
+.back-face {
+  
+}
+
 
 .back-icon {
     width: 140px;
     height: 140px;
+}
+
+.front-face {
+
 }
