--- a/style.css
+++ b/style.css
@@ -1,75 +1,90 @@
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 html {
-    min-height: 100vh; /*Allows for the site to be the view of the entire screen*/
+  min-height: 100vh; /*Allows for the site to be the view of the entire screen*/
 }
 
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background: radial-gradient(seashell, peachpuff);  /*the radial gradient allows for a blend of colors for background*/
-} 
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background: radial-gradient(
+    seashell,
+    peachpuff
+  ); /*the radial gradient allows for a blend of colors for background*/
+}
 
 .game-container {
-    display: grid;
-    grid-template-columns: repeat(4,auto);
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-gap: 5px; /* found that grid gap allows for a better aestetic for card look*/
-    /* border: .5px solid black; */
-    /* height: 300px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-gap: 5px; /* found that grid gap allows for a better aestetic for card look*/
+  /* border: .5px solid black; */
+  /* height: 300px;
     width: 550px; */
-    margin: auto;
-    justify-content: center;
+  margin: auto;
+  justify-content: center;
 }
 
 .card {
-    border: 2px solid black;
-    height: 150px;
-    width: 150px;
-    position: relative;
-    /* background: radial-gradient(#93a5cf, #e4efe9); */
+  border: 2px solid black;
+  height: 150px;
+  width: 150px;
+  position: relative;
+  /* background: radial-gradient(#93a5cf, #e4efe9); */
 }
-
 
 .card.visible .back-face {
-    transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
 
-
 .card.visible .front-face {
-    transform: rotateY(0);
+  transform: rotateY(0);
 }
 
 .both-sides {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /*this will allow for images to not leak over to another sie or outside*/
-    backface-visibility: hidden; /*allows for user to not see back of cards*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /*this will allow for images to not leak over to another sie or outside*/
+  backface-visibility: hidden; /*allows for user to not see back of cards*/
 }
 
 .back-face {
-    background: lightcoral;
-    border-style: solid;
-    border-color: mistyrose;
+  background: lightcoral;
+  border-style: solid;
+  border-color: mistyrose;
 }
 
 .back-icon {
-    width: 140px;
-    height: 140px;
+  width: 140px;
+  height: 140px;
+  transform: translateY(-10px);
+  transition: trasnform 100ms ease-in-out;
+}
+
+.back-face:hover .back-icon {
+  transform: translateY(0);
 }
 
 .front-face {
-transform: rotateY(180deg);
-border-style: solid;
-border-color: mistyrose;
-background: navajowhite;
+  transform: rotateY(180deg);
+  border-style: solid;
+  border-color: mistyrose;
+  background: navajowhite;
 }
 
 .front-icon {
-    width: 140px;
-    height: 140px;
+  width: 140px;
+  height: 140px;
+  transform: scale(0.9);
+  transition: trasnform 100ms ease-in-out;
+}
+
+.front-face:hover .front-icon {
+  transform: scale(1);
 }
