--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   ); /*the radial gradient allows for a blend of colors for background*/
 }
 
+.gametitle {
+  text-align: center;
+}
+
 .game-container {
   display: grid;
   grid-template-columns: repeat(4, auto);
@@ -25,6 +29,7 @@ body {
     width: 550px; */
   margin: auto;
   justify-content: center;
+  perspective: 500px;
 }
 
 .card {
@@ -35,12 +40,8 @@ body {
   /* background: radial-gradient(#93a5cf, #e4efe9); */
 }
 
-.card.visible .back-face {
-  transform: rotateY(-180deg);
-}
-
-.card.visible .front-face {
-  transform: rotateY(0);
+.card:hover {
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=132816), auto;
 }
 
 .both-sides {
@@ -52,6 +53,15 @@ body {
   align-items: center;
   overflow: hidden; /*this will allow for images to not leak over to another sie or outside*/
   backface-visibility: hidden; /*allows for user to not see back of cards*/
+  transition: transform 500ms ease-in-out;
+}
+
+.card.visible .back-face {
+  transform: rotateY(-180deg);
+}
+
+.card.visible .front-face {
+  transform: rotateY(0);
 }
 
 .back-face {
@@ -87,4 +97,64 @@ body {
 
 .front-face:hover .front-icon {
   transform: scale(1);
+}
+
+.card.matched .front-icon {
+  animation: dance 1s linear infinite 500ms;
+}
+
+.overlay-text {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  display: none;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: lightsalmon;
+  font-family: "Times New Roman", Times, serif;
+  transition: background-color 500ms, font-size 500ms;
+}
+
+.overlay-text-small {
+  font-size: 0.3em;
+}
+
+.overlay-text.visible {
+  display: flex;
+  flex-direction: column;
+  animation: overlay-grow 500ms forwards;
+}
+
+@keyframes overlay-grow {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 0;
+  }
+  to {
+    background-color: rgba(0, 0, 0, 0.8);
+    font-size: 10em;
+  }
+}
+
+@keyframes dance {
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(-100deg);
+  }
+  75% {
+    transform: rotate(100deg);
+  }
+}
+
+@media (max-width: 600px) {
+  .game-container {
+    grid-template-columns: repeat(2, auto);
+  }
 }
