--- a/style.css
+++ b/style.css
@@ -164,9 +164,22 @@ body {
   }
 }
 
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .game-container {
     grid-template-columns: repeat(2, auto);
+    width: 200px;
+  }
+
+  .game-info-container {
+    flex-direction: column;
+    align-items: center;
+  }
+} */
+
+@media (min-width: 120px) and (max-width: 600px) {
+  .game-container {
+    grid-template-columns: repeat(2, auto);
+    /* width: 200px; */
   }
 
   .game-info-container {
