--- a/style.css
+++ b/style.css
@@ -79,10 +79,16 @@ body {
 }
 
 .card.visible .back-face {
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
 }
 
 .card.visible .front-face {
+  -webkit-transform: rotateY(0);
+  -moz-transform: rotateY(0);
+  -ms-transform: rotateY(0);
   transform: rotateY(0);
 }
 
@@ -95,15 +101,26 @@ body {
 .back-icon {
   width: 140px;
   height: 140px;
+  -webkit-transform: translateY(-10px);
+  -moz-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
+  -webkit-transition: transform 100ms ease-in-out;
+  -moz-transition: transform 100ms ease-in-out;
   transform: translateY(-10px);
   transition: trasnform 100ms ease-in-out;
 }
 
 .back-face:hover .back-icon {
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
   transform: translateY(0);
 }
 
 .front-face {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
   transform: rotateY(180deg);
   border-style: solid;
   border-color: mistyrose;
@@ -113,15 +130,25 @@ body {
 .front-icon {
   width: 140px;
   height: 140px;
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -webkit-transition: transform 100ms ease-in-out;
+  -moz-transition: transform 100ms ease-in-out;
   transform: scale(0.9);
-  transition: trasnform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out;
 }
 
 .front-face:hover .front-icon {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
   transform: scale(1);
 }
 
 .card.matched .front-face .front-icon {
+  -webkit-animation: dance 1s linear infinite 500ms;
+  -moz-animation: dance 1s linear infinite 500ms;
   animation: dance 1s linear infinite 500ms;
 }
 
@@ -138,6 +165,9 @@ body {
   flex-direction: column;
   color: lightsalmon;
   font-family: "Times New Roman", Times, serif;
+  -webkit-transition: background-color 500ms, font-size 500ms;
+  -ms-transition: background-color 500ms, font-size 500ms;
+  -o-transition: background-color 500ms, font-size 500ms;
   transition: background-color 500ms, font-size 500ms;
 }
 
@@ -148,6 +178,9 @@ body {
 .overlay-text.visible {
   display: flex;
   flex-direction: column;
+  -webkit-animation: overlay-grow 500ms forwards;
+  -moz-animation: overlay-grow 500ms forwards;
+  -o-animation: overlay-grow 500ms forwards;
   animation: overlay-grow 500ms forwards;
 }
 
