--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden; /*this will allow for images to not leak over to another sie or outside*/
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: transform 500ms ease-in-out;
   backface-visibility: hidden; /*allows for user to not see back of cards*/
   transition: transform 500ms ease-in-out;
 }
